--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 		<meta name="google-site-verification" content="NIW4Bzmoi4pPPxGyBK158SsE1B5bKovZbP4qPd04V84" />
 		<meta charset="utf-8">
 
-		<title>PSYREX | thePSYREX</title>
-		<meta name="keywords" content="PSYREX">
-		<meta name="description" content="psyrex">
+		<title>INDIAN URBAN</title>
+		<meta name="keywords" content="indian urban, lowers, lowers for men ,sport lowers, lowers all color, hosiery lower, causal lowers, yoga lowers">
+		<meta name="description" content="contact us for finest lowers">
         <meta name="author" content="hell_xyz">
         
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -35,12 +35,12 @@
 				<div class="row">
 					<div class="col-md-2"></div>
 					<div class="col-md-8 wow fadeIn" data-wow-delay="0.9s">
-						<h3>“Love yourself,</h3>
-						<h3>in order to be loved.”</h3>
-						<h1>Psγrєx</h1>
-						<h2 class="rotate">WEEB,PERVERTED GENTLEMAN, READER,PSYREX</h2>
-						<p>PSYREX is a Man of Focus, Commitment and Sheer Fucking Will</p>
-						<a href="#work" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">About Me</a>
+						<h3>“this is your stop for your fit lowers</h3>
+						<h3>check out our range of lowers.”</h3>
+						<h1>made in india</h1>
+						<h2 class="rotate">Causual ,Sport ,Yoga ,Hosiery</h2>
+						<p>we provide only quality products</p>
+						<a href="#work" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">About IU</a>
 					</div>
 					<div class="col-md-2"></div>
 				</div>
@@ -64,8 +64,8 @@
 								<i class="fa fa-code"></i>
 							</div>
 							<div class="media-body">
-								<h3 class="media-heading">Find me here</h3>
-								<p>Developer of <a rel="nofollow" href="https://t.me/incofficials">,My INC Village</a>. A telegram group where i had spend a wonderfull time.</p>
+								<h3 class="media-heading">Find us here</h3>
+								<p> contact me here <a rel="nofollow" href="not_psyrex.t.me">,here via whatsapp</a>. you can easily directly place an order by messaging us.</p>
 							</div>
 						</div>
 					</div>
@@ -77,7 +77,7 @@
 							</div>
 							<div class="media-body">
 								<h3 class="media-heading">Editor</h3>
-								<p>I am a all time all things editor , i edit photo, logo, code, music, Everything 🔥</p>
+								<p>we manufacture all types of lowers and jackets</p>
 							</div>
 						</div>
 					</div>
@@ -89,7 +89,7 @@
 							</div>
 							<div class="media-body">
 								<h3 class="media-heading">Learning</h3>
-								<p>Life is a game and i am playing to win, learning to live </p>
+								<p> if you have any question/doubt , solve it yourself</p>
 							</div>
 						</div>
 					</div>
@@ -100,12 +100,12 @@
 		<!-- end work -->
 
 		<!-- start about -->
-		<div id="about" class="section">
+		<! --<div id="about" class="section">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6 col-xs-11 wow fadeInLeft" data-wow-delay="0.9s">
 						<h2>My Stats</h2>
-						<h4>Moi Statistics</h4>
+						<h4>Our Statistics</h4>
 					</div>
 					<div class="col-md-6 col-xs-11 wow fadeInRight" data-wow-delay="0.9s">
 						<span class="text-top">collection<small>99%</small></span>
@@ -132,7 +132,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div>-->
 		<!-- end about -->
 
 		<!-- start portfolio -->
@@ -140,7 +140,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<h2 class="wow bounce">My Waifu</h2>
+					<h2 class="wow bounce">Our lowers</h2>
 				</div>
 				<div class="col-md-4 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
 					<div class="portfolio-thumb">
@@ -189,8 +189,8 @@
 				<div class="row">
 					<div class="col-lg-5 col-lg-offset-1 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
 						<address>
-							<p class="contact-title">REACH ME</p>
-							<p><i class="fa fa-envelope-o"></i> mailto:thepsyrex@gmail.com</p>
+							<p class="contact-title">REACH US</p>
+							<p><i class="fa fa-envelope-o"></i> mailto:premsagercreations@gmail.com</p>
 							<p><i class="fa fa-map-marker"></i> India 🇮🇳</p>
 						</address>
 					</div>
@@ -213,7 +213,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 wow fadeIn" data-wow-delay="0.9s">
-						<p>Copyright &copy; 2022 PSYREX 
+						<p>Copyright &copy; 2022 IU
                         </p>
 						<hr>
 						<ul class="social-icon">
