--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 				</div>
 				<div class="col-md-4 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
 					<div class="portfolio-thumb">
-						<img src="images/zerotwo.jpg" class="img-responsive" alt="portfolio img">
+						<img src="images/001.jpg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
 								<h4>ZeroTwo</h4>
 
@@ -153,7 +153,7 @@
 				</div>
 				<div class="col-md-4 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
 					<div class="portfolio-thumb">
-						<img src="images/chizuru.jpg" class="img-responsive" alt="portfolio img">
+						<img src="images/002.jpg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
 								<h4>Mizuhara</h4>
 
@@ -162,7 +162,7 @@
 				</div>
 				<div class="col-md-6 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
 					<div class="portfolio-thumb">
-						<img src="images/violet.jpg" class="img-responsive" alt="portfolio img">
+						<img src="images/003.jpg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
 								<h4>Violet Evergarden</h4>
 
@@ -171,7 +171,7 @@
 				</div>
 				<div class="col-md-6 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
 					<div class="portfolio-thumb">
-						<img src="images/mai.jpg" class="img-responsive" alt="portfolio img">
+						<img src="images/004.jpg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
 								<h4>Mai Sakurajima</h4>
 
