--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 		<!-- end work -->
 
 		<!-- start about -->
-		<! --<div id="about" class="section">
+		<div id="about" class="section">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6 col-xs-11 wow fadeInLeft" data-wow-delay="0.9s">
@@ -132,7 +132,7 @@
 					</div>
 				</div>
 			</div>
-		</div>-->
+		</div>
 		<!-- end about -->
 
 		<!-- start portfolio -->
@@ -146,7 +146,7 @@
 					<div class="portfolio-thumb">
 						<img src="images/001.jpg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
-								<h4>ZeroTwo</h4>
+								<h4>Indian Urban</h4>
 
 							</div>
 					</div>
@@ -155,7 +155,7 @@
 					<div class="portfolio-thumb">
 						<img src="images/002.jpg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
-								<h4>Mizuhara</h4>
+								<h4>Indian Urban</h4>
 
 							</div>
 					</div>
@@ -164,7 +164,7 @@
 					<div class="portfolio-thumb">
 						<img src="images/003.jpg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
-								<h4>Violet Evergarden</h4>
+								<h4>Indian Urban</h4>
 
 							</div>
 					</div>
@@ -173,7 +173,7 @@
 					<div class="portfolio-thumb">
 						<img src="images/004.jpg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
-								<h4>Mai Sakurajima</h4>
+								<h4>Indian Urban</h4>
 
 							</div>
 					</div>
