--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 					<div class="col-lg-5 col-lg-offset-1 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
 						<address>
 							<p class="contact-title">REACH US</p>
-							<p><i class="fa fa-envelope-o"></i> mailto:premsagercreations@gmail.com</p>
+							<p><i class="fa fa-envelope-o"></i> premsagercreations@gmail.com</p>
 							<p><i class="fa fa-map-marker"></i> India 🇮🇳</p>
 						</address>
 					</div>
